<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/num_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edt_num_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/num_1"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/num_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:layout_below="@id/num_1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edt_num_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_num_1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/num_2"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSum"
        android:text="@string/btnSum"
        android:layout_below="@id/textViewRes"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:textSize="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDiff"
        android:text="@string/btnDiff"
        android:layout_below="@id/textViewRes"
        android:layout_marginStart="230dp"
        android:layout_marginTop="80dp"
        android:textSize="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextLab"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/nextLab"
        android:layout_marginBottom="30dp"
        android:textSize="10dp"/>

</RelativeLayout>