<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryTextActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="25dp"
                android:text="@string/test"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1"
                android:text="@string/q1"
                android:layout_below="@+id/test"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans1"
                android:entries="@array/ans1"
                android:layout_below="@+id/q1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q2"
                android:text="@string/q2"
                android:layout_below="@+id/ans1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans2"
                android:entries="@array/ans2"
                android:layout_below="@+id/q2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3"
                android:text="@string/q3"
                android:layout_below="@+id/ans2"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans3"
                android:entries="@array/ans3"
                android:layout_below="@+id/q3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4"
                android:text="@string/q4"
                android:layout_below="@+id/ans3"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans4"
                android:entries="@array/ans4"
                android:layout_below="@+id/q4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5"
                android:text="@string/q5"
                android:layout_below="@+id/ans4"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans5"
                android:entries="@array/ans5"
                android:layout_below="@+id/q5"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q6"
                android:text="@string/q6"
                android:layout_below="@+id/ans5"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans6"
                android:entries="@array/ans6"
                android:layout_below="@+id/q6"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q7"
                android:text="@string/q7"
                android:layout_below="@+id/ans6"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans7"
                android:entries="@array/ans7"
                android:layout_below="@+id/q7"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q8"
                android:text="@string/q8"
                android:layout_below="@+id/ans7"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans8"
                android:entries="@array/ans8"
                android:layout_below="@+id/q8"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q9"
                android:text="@string/q9"
                android:layout_below="@+id/ans8"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans9"
                android:entries="@array/ans9"
                android:layout_below="@+id/q9"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q10"
                android:text="@string/q10"
                android:layout_below="@+id/ans9"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ans10"
                android:entries="@array/ans10"
                android:layout_below="@+id/q10"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_button"
                android:text="@string/check_name"
                android:layout_below="@id/ans10"
                android:layout_centerHorizontal="true"
                android:layout_margin="30dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>